--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,10 +15,12 @@
     border: none;
     background-color: #0D1F2D;
     color: white;
-
+    margin-right: 10px;
 }
 
 .nav-links :hover {
     align-self: stretch;
     border-bottom: 2px solid #0D1F2D;
+    cursor: pointer;
 }
+
