--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
     flex-flow: row nowrap;
     justify-content: space-around;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 60px;
     box-sizing: border-box;
 }
