--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -19,6 +19,9 @@
     background-color: #0D1F2D;
     color: white;
     margin-right: 10px;
+    outline-style: none;
+    outline-width: 0;
+    outline: none;
 }
 
 .nav-links {
