--- a/src/containers/LoginForm.css
+++ b/src/containers/LoginForm.css
@@ -10,11 +10,13 @@ span:hover {
     outline-width : 0;
 }
 
-button {
+.button-div button {
     background-color:  #0D1F2D;
     color: white;
     border: none;
-    height: 130%;
+    height: 35px;
+    margin-right: 0;
+    outline: none;
 }
 
 img {
@@ -31,6 +33,8 @@ img {
 .google-button {
     background-color: white;
     border: 1px solid lightgray;
+    margin-right: 0;
+    outline: none;
 }
 
 .google-button:hover {
@@ -41,3 +45,4 @@ img {
     -moz-box-shadow:    0px 0px 30px 0px lightskyblue;
     box-shadow:         0px 0px 30px 0px lightskyblue;
 }
+
