--- a/src/pages/Recipes/Recipe.css
+++ b/src/pages/Recipes/Recipe.css
@@ -1,7 +1,7 @@
 
 .recipe-img {
     width: 100%;
-    height: 280px;
+    height: auto;
     margin-bottom: 30px;
 }
 
@@ -15,7 +15,7 @@
 }
 
 .row-name {
-    height: 70px;
+    height: 25%;
 }
 
 .links {
@@ -55,5 +55,5 @@
 }
 
 .row-description {
-    height: 150px;
+    height: 50%;
 }
