--- a/src/pages/UserProfile/UserProfile.css
+++ b/src/pages/UserProfile/UserProfile.css
@@ -78,3 +78,21 @@
     width:auto;
     border: 2px solid #0D1F2D;
   }
+
+  .button-upload-disabled {
+    background: #434344;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: 'Rubik', sans-serif;
+    font-size: inherit;
+    font-weight: bolder;
+    margin-bottom: 1rem;
+    outline: none;
+    padding: 1rem 50px;
+    position: relative;
+    transition: all 0.3s;
+    vertical-align: middle;
+  }
