--- a/src/pages/orderHistory/orderHistory.css
+++ b/src/pages/orderHistory/orderHistory.css
@@ -1,5 +1,6 @@
 .order-image {
     height: auto;
+    border-radius: 5px;
 }
 
 .order-history {
@@ -15,4 +16,15 @@ body {
 
 .order-time {
     font-size: larger;
+}
+
+.linktomeal {
+    font-size: 1.75rem;
+    color: #212529;
+    font-weight: 500;
+    text-decoration: underline;
+}
+
+.linktomeal:hover {
+    color: #6481ad;
 }
